--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --mode client && vite build",
-    "preview": "wrangler pages dev dist",
-    "deploy": "$npm_execpath run build && wrangler pages deploy dist"
+    "preview": "wrangler dev dist/index.js",
+    "deploy": "$npm_execpath run build && wrangler deploy dist/index.js"
   },
   "dependencies": {
-    "hono": "^4.3.11",
+    "hono": "^4.6.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240208.0",
-    "@hono/vite-cloudflare-pages": "^0.4.0",
-    "@hono/vite-dev-server": "^0.12.1",
+    "@cloudflare/workers-types": "^4.20241106.0",
+    "@hono/vite-build": "^1.1.0",
+    "@hono/vite-dev-server": "^0.16.0",
     "@types/react": "^18.2.60",
     "@types/react-dom": "^18.2.19",
-    "vite": "^5.2.11",
-    "wrangler": "^3.57.1"
+    "vite": "^5.4.10",
+    "wrangler": "^3.86.0"
   }
 }
