--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "hono-spa-react"
 compatibility_date = "2024-09-19"
-assets = { directory = "./dist/" }
+assets = { directory = "./dist/", not_found_handling = "none" }
 
 [vars]
 MY_VAR = "hello"
